web-infras/parser/tests/fixtures/babel/es2015/class-methods/disallow-computed-async-string/output.txt
[SyntaxError]: Missing semicolon or line terminator. (2,13)
2|  ["async"] a() {}
 |           ^
